fix: variant overflow

--- a/src/pages/variants/WorkBench.module.scss
+++ b/src/pages/variants/WorkBench.module.scss
@@ -13,10 +13,6 @@
   width: 378px;
 }
 
-.textContainer {
-  height: 24px;
-}
-
 .alert {
   min-height: 40px;
 }
